--- a/.gitattributes
+++ b/.gitattributes
@@ -37,6 +37,7 @@ artwork/icons/Symbols/SymbolT.tiff -text
 artwork/icons/txt.icns -text
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
+documentation/SessionCreation.txt -text
 documentation/SessionProfile.txt -text
 documentation/autodoc/HTMLTemplate.html -text
 documentation/connection-channel-bla.jpg -text
