-fixed up Objective-C Symbol spaces -added recognition of versioning conflicts to Obj-C Symbols -fixed support for Symbol regexs without groups -made symbol replace/find multiline aware

--- a/.gitattributes
+++ b/.gitattributes
@@ -531,6 +531,7 @@ subethaedit/SubEthaEditSuite.scriptTerminology -text
 subethaedit/SubEthaEdit_Prefix.pch -text
 subethaedit/SymbolTableEntry.h -text
 subethaedit/SymbolTableEntry.m -text
+subethaedit/SymbolWarn.tiff -text
 subethaedit/SyntaxDefinition.h -text
 subethaedit/SyntaxDefinition.m -text
 subethaedit/SyntaxHighlighter.h -text
