- sessions now update in rendezvous browser and presence manager - session names are kept in sync with document name (server side) - added StatusReadWrite icon - improved other status items - now showing the correct icon for the filetype derived via the extension

--- a/.gitattributes
+++ b/.gitattributes
@@ -626,6 +626,7 @@ subethaedit/artwork/SplitClose.tiff -text
 subethaedit/artwork/SplitOpen.tiff -text
 subethaedit/artwork/StatusLock.tiff -text
 subethaedit/artwork/StatusReadOnly.tiff -text
+subethaedit/artwork/StatusReadWrite.tiff -text
 subethaedit/artwork/SubEthaEdit.icns -text
 subethaedit/artwork/Symbol#.tiff -text
 subethaedit/artwork/SymbolC.tiff -text
