--- a/.gitattributes
+++ b/.gitattributes
@@ -324,6 +324,8 @@ subethaedit/MoreIsBetter/MoreUNIX.c -text
 subethaedit/MoreIsBetter/MoreUNIX.h -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
+subethaedit/NSDataTCMAdditions.h -text
+subethaedit/NSDataTCMAdditions.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
 subethaedit/NSDictionaryTCMAdditions.m -text
 subethaedit/NSImageTCMAdditions.h -text
