- spiced up the ParticipantsView - removed logging from PresenceManager when name collision of netservices   happens - closing profile on leave

--- a/.gitattributes
+++ b/.gitattributes
@@ -632,6 +632,7 @@ subethaedit/artwork/GeneralPrefs.tiff -text
 subethaedit/artwork/HideChangeMarks.psd -text
 subethaedit/artwork/NextChange.psd -text
 subethaedit/artwork/NextSymbol.tiff -text
+subethaedit/artwork/ParticipantBar_Fill.tiff -text
 subethaedit/artwork/Participants.icns -text
 subethaedit/artwork/PreviousChange.psd -text
 subethaedit/artwork/PreviousSymbol.tiff -text
