--- a/.gitattributes
+++ b/.gitattributes
@@ -630,6 +630,8 @@ subethaedit/artwork/DefaultPerson.tiff -text
 subethaedit/artwork/EditPrefs.tiff -text
 subethaedit/artwork/GeneralPrefs.tiff -text
 subethaedit/artwork/HideChangeMarks.psd -text
+subethaedit/artwork/InternetResume.tiff -text
+subethaedit/artwork/InternetStop.tiff -text
 subethaedit/artwork/NextChange.psd -text
 subethaedit/artwork/NextSymbol.tiff -text
 subethaedit/artwork/ParticipantBar_Fill.tiff -text
