- improved FindPanel a little bit - implemented FindAll

--- a/.gitattributes
+++ b/.gitattributes
@@ -242,6 +242,9 @@ subethaedit/English.lproj/DocumentProxy.nib/keyedobjects.nib -text
 subethaedit/English.lproj/EditPrefs.nib/classes.nib -text
 subethaedit/English.lproj/EditPrefs.nib/info.nib -text
 subethaedit/English.lproj/EditPrefs.nib/keyedobjects.nib -text
+subethaedit/English.lproj/FindAll.nib/classes.nib -text
+subethaedit/English.lproj/FindAll.nib/info.nib -text
+subethaedit/English.lproj/FindAll.nib/keyedobjects.nib -text
 subethaedit/English.lproj/FindReplace.nib/classes.nib -text
 subethaedit/English.lproj/FindReplace.nib/info.nib -text
 subethaedit/English.lproj/FindReplace.nib/keyedobjects.nib -text
@@ -280,6 +283,8 @@ subethaedit/English.lproj/SelectEncodingsPanel.nib/objects.nib -text
 subethaedit/English.lproj/WebPreview.nib/classes.nib -text
 subethaedit/English.lproj/WebPreview.nib/info.nib -text
 subethaedit/English.lproj/WebPreview.nib/keyedobjects.nib -text
+subethaedit/FindAllController.h -text
+subethaedit/FindAllController.m -text
 subethaedit/FindReplaceController.h -text
 subethaedit/FindReplaceController.m -text
 subethaedit/FontAttributesToStringValueTransformer.h -text
