- Added CFBundleURLType "see" to Info.plist - Added GURL handling by using GetURLCommand

--- a/.gitattributes
+++ b/.gitattributes
@@ -293,6 +293,8 @@ subethaedit/Functions.h -text
 subethaedit/Functions.m -text
 subethaedit/GeneralPreferences.h -text
 subethaedit/GeneralPreferences.m -text
+subethaedit/GetURLCommand.h -text
+subethaedit/GetURLCommand.m -text
 subethaedit/GutterRulerView.h -text
 subethaedit/GutterRulerView.m -text
 subethaedit/HandshakeProfile.h -text
