--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -189,6 +189,17 @@
 			<true/>
 		</dict>
 	</array>
+        <key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>SubEthaEdit</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>see</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>SubEthaEdit</string>
 	<key>CFBundleIconFile</key>
