--- a/.gitattributes
+++ b/.gitattributes
@@ -526,6 +526,8 @@ subethaedit/PopUpButtonCell.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
+subethaedit/PullDownButtonCell.h -text
+subethaedit/PullDownButtonCell.m -text
 subethaedit/RadarScroller.h -text
 subethaedit/RadarScroller.m -text
 subethaedit/RegexSymbolDefinition.h -text
