--- a/.gitattributes
+++ b/.gitattributes
@@ -623,6 +623,7 @@ subethaedit/Tools/parseObjCHeadersForAutocomplete.pl -text
 subethaedit/Tools/serials/attackserial.pl -text
 subethaedit/Tools/serials/checkserial.pl -text
 subethaedit/Tools/serials/makeserial.pl -text
+subethaedit/Tools/serials/serials1.txt -text
 subethaedit/URLDataProtocol.h -text
 subethaedit/URLDataProtocol.m -text
 subethaedit/URLImageView.h -text
