-added some tooltips to findreplace -added new changemarks icon

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,12 +17,14 @@ artwork/icons/HYDRA3b3[!!-~]48x48.psd -text
 artwork/icons/HYDRA3b3-bunt.psd -text
 artwork/icons/HYDRA3b3-bunt2.psd -text
 artwork/icons/HYDRA3b3.psd -text
+artwork/icons/HideChangeMarks.psd -text
 artwork/icons/Hydra1-1.psd -text
 artwork/icons/Hydra1-2-3.psd -text
 artwork/icons/Hydra2-1.psd -text
 artwork/icons/Hydra2-2.psd -text
 artwork/icons/Hydra3b-2.psd -text
 artwork/icons/HydraFiles.icns -text
+artwork/icons/ShowChangeMarks.psd -text
 artwork/icons/Symbols/Symbol#.psd -text
 artwork/icons/Symbols/Symbol#.tiff -text
 artwork/icons/Symbols/SymbolC.psd -text
