-Added C++ mode, on par with old one, better Symbol recognition (Methods, Classes, Functions) -Fixed C function recognition for functions containing "[]"

--- a/.gitattributes
+++ b/.gitattributes
@@ -314,6 +314,10 @@ subethaedit/LayoutManager.m -text
 subethaedit/Mode.icns -text
 subethaedit/Modes/Base.mode/Contents/Info.plist -text
 subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/C++.mode/Contents/Info.plist -text
+subethaedit/Modes/C++.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/C++.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/C++.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/C.mode/Contents/Info.plist -text
 subethaedit/Modes/C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/C.mode/Contents/Resources/RegexSymbols.xml -text
