--- a/.gitattributes
+++ b/.gitattributes
@@ -599,6 +599,8 @@ subethaedit/TCMBencodingUtilities.h -text
 subethaedit/TCMBencodingUtilities.m -text
 subethaedit/TCMHost.h -text
 subethaedit/TCMHost.m -text
+subethaedit/TCMListView.h -text
+subethaedit/TCMListView.m -text
 subethaedit/TCMMMUserSEEAdditions.h -text
 subethaedit/TCMMMUserSEEAdditions.m -text
 subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.h -text
