-Adding Perl mode -Up to par with old one, better colors, better function recognition

--- a/.gitattributes
+++ b/.gitattributes
@@ -349,6 +349,10 @@ subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Perl.mode/Contents/Info.plist -text
+subethaedit/Modes/Perl.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Perl.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Perl.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/XML.mode/Contents/Info.plist -text
 subethaedit/Modes/XML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/XML.mode/Contents/Resources/SyntaxDefinition.xml -text
