--- a/.gitattributes
+++ b/.gitattributes
@@ -357,6 +357,10 @@ subethaedit/Modes/Python.mode/Contents/Info.plist -text
 subethaedit/Modes/Python.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Python.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Python.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Ruby.mode/Contents/Info.plist -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/XML.mode/Contents/Info.plist -text
 subethaedit/Modes/XML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/XML.mode/Contents/Resources/SyntaxDefinition.xml -text
