--- a/.gitattributes
+++ b/.gitattributes
@@ -340,6 +340,10 @@ subethaedit/Modes/HTML.mode/Contents/Resources/SymbolD.png -text
 subethaedit/Modes/HTML.mode/Contents/Resources/SymbolH.png -text
 subethaedit/Modes/HTML.mode/Contents/Resources/Symbola.png -text
 subethaedit/Modes/HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Java.mode/Contents/Info.plist -text
+subethaedit/Modes/Java.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Java.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Java.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/LaTeX.mode/Contents/Info.plist -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/AutocompleteAdditions.txt -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
