-Added Donation serials from reserved serial space and email template

--- a/.gitattributes
+++ b/.gitattributes
@@ -694,6 +694,7 @@ subethaedit/Tools/serials/checkserial/checkserial.xcode/pittenau.pbxuser -text
 subethaedit/Tools/serials/checkserial/checkserial.xcode/project.pbxproj -text
 subethaedit/Tools/serials/checkserial/checkserial_Prefix.pch -text
 subethaedit/Tools/serials/checkserial/main.m -text
+subethaedit/Tools/serials/donations.txt -text
 subethaedit/Tools/serials/makeserial.pl -text
 subethaedit/Tools/serials/serials1.txt -text
 subethaedit/Tools/serials/serials2.txt -text
