--- a/.gitattributes
+++ b/.gitattributes
@@ -204,6 +204,8 @@ prototype/xmpp-cli/main.m -text
 prototype/xmpp-cli/xmpp.1 -text
 prototype/xmpp-cli/xmpp.xcode/project.pbxproj -text
 prototype/xmpp-cli/xmpp_Prefix.pch -text
+subethaedit/AboutPanelController.h -text
+subethaedit/AboutPanelController.m -text
 subethaedit/AppController.h -text
 subethaedit/AppController.m -text
 subethaedit/ButtonScrollView.h -text
@@ -237,6 +239,9 @@ subethaedit/EditPreferences.h -text
 subethaedit/EditPreferences.m -text
 subethaedit/EncodingManager.h -text
 subethaedit/EncodingManager.m -text
+subethaedit/English.lproj/AboutPanel.nib/classes.nib -text
+subethaedit/English.lproj/AboutPanel.nib/info.nib -text
+subethaedit/English.lproj/AboutPanel.nib/keyedobjects.nib -text
 subethaedit/English.lproj/Credits.rtf -text
 subethaedit/English.lproj/DocumentProxy.nib/classes.nib -text
 subethaedit/English.lproj/DocumentProxy.nib/info.nib -text
