-Added Myriad Logo to About Panel

--- a/.gitattributes
+++ b/.gitattributes
@@ -770,6 +770,7 @@ subethaedit/artwork/SymbolT.tiff -text
 subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/URLIcon.tiff -text
 subethaedit/artwork/WebReload.tiff -text
+subethaedit/artwork/myriad.png -text
 subethaedit/createDiskImage.sh -text
 subethaedit/debug.tiff -text
 subethaedit/main.m -text
