--- a/.gitattributes
+++ b/.gitattributes
@@ -225,6 +225,11 @@ subethaedit/Debug/DebugPreferences.m -text
 subethaedit/Debug/DebugPrefs.nib/classes.nib -text
 subethaedit/Debug/DebugPrefs.nib/info.nib -text
 subethaedit/Debug/DebugPrefs.nib/keyedobjects.nib -text
+subethaedit/Debug/DebugPresence.nib/classes.nib -text
+subethaedit/Debug/DebugPresence.nib/info.nib -text
+subethaedit/Debug/DebugPresence.nib/keyedobjects.nib -text
+subethaedit/Debug/DebugPresenceController.h -text
+subethaedit/Debug/DebugPresenceController.m -text
 subethaedit/Debug/DebugUserController.h -text
 subethaedit/Debug/DebugUserController.m -text
 subethaedit/Debug/DebugUsers.nib/classes.nib -text
