- added crisper subethaedit myriad logo

--- a/.gitattributes
+++ b/.gitattributes
@@ -742,6 +742,7 @@ subethaedit/artwork/HideChangeMarks.psd -text
 subethaedit/artwork/InternetResume.tiff -text
 subethaedit/artwork/InternetStop.tiff -text
 subethaedit/artwork/LogoGreenFullSize.psd -text
+subethaedit/artwork/NamedLogo2.tiff -text
 subethaedit/artwork/NextChange.psd -text
 subethaedit/artwork/NextSymbol.tiff -text
 subethaedit/artwork/ParticipantBar_Fill.tiff -text
