-Setup nib improved

--- a/.gitattributes
+++ b/.gitattributes
@@ -769,6 +769,7 @@ subethaedit/artwork/StatusPending.tiff -text
 subethaedit/artwork/StatusReadOnly.tiff -text
 subethaedit/artwork/StatusReadWrite.tiff -text
 subethaedit/artwork/SubEthaEdit.icns -text
+subethaedit/artwork/SubEthaEdit_Splash.png -text
 subethaedit/artwork/Symbol#.tiff -text
 subethaedit/artwork/SymbolC.tiff -text
 subethaedit/artwork/SymbolE.tiff -text
