-touched up toolbar icons and converted them to png -added new change mark icons

--- a/.gitattributes
+++ b/.gitattributes
@@ -744,20 +744,28 @@ subethaedit/artwork/DefaultPerson.tiff -text
 subethaedit/artwork/EditPrefs.tiff -text
 subethaedit/artwork/EmptyButton.tiff -text
 subethaedit/artwork/GeneralPrefs.tiff -text
+subethaedit/artwork/HideChangeMarks.png -text
 subethaedit/artwork/HideChangeMarks.psd -text
 subethaedit/artwork/InternetResume.tiff -text
 subethaedit/artwork/InternetStop.tiff -text
 subethaedit/artwork/NamedLogo2.tiff -text
+subethaedit/artwork/NextChange.png -text
 subethaedit/artwork/NextChange.psd -text
+subethaedit/artwork/NextSymbol.png -text
 subethaedit/artwork/NextSymbol.tiff -text
 subethaedit/artwork/ParticipantBar_Fill.tiff -text
 subethaedit/artwork/Participants.icns -text
+subethaedit/artwork/PreviousChange.png -text
 subethaedit/artwork/PreviousChange.psd -text
+subethaedit/artwork/PreviousSymbol.png -text
 subethaedit/artwork/PreviousSymbol.tiff -text
 subethaedit/artwork/Rendezvous.psd -text
 subethaedit/artwork/ScriptMenu.tiff -text
+subethaedit/artwork/ShiftLeft.png -text
 subethaedit/artwork/ShiftLeft.tiff -text
+subethaedit/artwork/ShiftRight.png -text
 subethaedit/artwork/ShiftRight.tiff -text
+subethaedit/artwork/ShowChangeMarks.png -text
 subethaedit/artwork/ShowChangeMarks.psd -text
 subethaedit/artwork/SplitClose.tiff -text
 subethaedit/artwork/SplitOpen.tiff -text
