--- a/.gitattributes
+++ b/.gitattributes
@@ -798,6 +798,7 @@ subethaedit/artwork/SymbolT.tiff -text
 subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/URLIcon.tiff -text
 subethaedit/artwork/WebReload.tiff -text
+subethaedit/artwork/codingmonkeys.png -text
 subethaedit/artwork/myriad.png -text
 subethaedit/createDiskImage.sh -text
 subethaedit/debug.tiff -text
