-added Regular Expression help, Oniguruma and OgreKit license.

--- a/.gitattributes
+++ b/.gitattributes
@@ -621,6 +621,7 @@ subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
 subethaedit/PullDownButtonCell.h -text
 subethaedit/PullDownButtonCell.m -text
+subethaedit/RE.txt -text
 subethaedit/RadarScroller.h -text
 subethaedit/RadarScroller.m -text
 subethaedit/RegexSymbolDefinition.h -text
