--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -158,7 +158,7 @@
 				<string>yaml</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>SubEthaEditFiles</string>
+			<string>SubEthaEditFiles.icns</string>
 			<key>CFBundleTypeMIMETypes</key>
 			<array>
 				<string>text/plain</string>
@@ -180,7 +180,7 @@
 				<string>mode</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>Mode</string>
+			<string>Mode.icns</string>
 			<key>CFBundleTypeName</key>
 			<string>SubEthaEditModeType</string>
 			<key>CFBundleTypeRole</key>
