--- a/.gitattributes
+++ b/.gitattributes
@@ -336,6 +336,7 @@ subethaedit/Invitation.aiff -text
 subethaedit/Knock.wav -text
 subethaedit/LayoutManager.h -text
 subethaedit/LayoutManager.m -text
+subethaedit/Localizable.strings -text
 subethaedit/Mode.icns -text
 subethaedit/Modes/ActionScript.mode/Contents/Info.plist -text
 subethaedit/Modes/ActionScript.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
