-adding own symbol icons

--- a/.gitattributes
+++ b/.gitattributes
@@ -802,16 +802,25 @@ subethaedit/artwork/SubEthaEdit.icns -text
 subethaedit/artwork/SubEthaEdit_Splash.png -text
 subethaedit/artwork/Symbol#.tiff -text
 subethaedit/artwork/SymbolC.tiff -text
+subethaedit/artwork/SymbolE.png -text
 subethaedit/artwork/SymbolE.tiff -text
 subethaedit/artwork/SymbolF().tiff -text
+subethaedit/artwork/SymbolF.png -text
 subethaedit/artwork/SymbolF.tiff -text
+subethaedit/artwork/SymbolG.png -text
 subethaedit/artwork/SymbolG.tiff -text
+subethaedit/artwork/SymbolK.png -text
 subethaedit/artwork/SymbolK.tiff -text
+subethaedit/artwork/SymbolL.png -text
 subethaedit/artwork/SymbolL.tiff -text
 subethaedit/artwork/SymbolM.tiff -text
+subethaedit/artwork/SymbolP.png -text
 subethaedit/artwork/SymbolP.tiff -text
+subethaedit/artwork/SymbolS.png -text
 subethaedit/artwork/SymbolS.tiff -text
+subethaedit/artwork/SymbolT.png -text
 subethaedit/artwork/SymbolT.tiff -text
+subethaedit/artwork/SymbolV.png -text
 subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/URLIcon.tiff -text
 subethaedit/artwork/WebReload.tiff -text
