-adding mode.psd

--- a/.gitattributes
+++ b/.gitattributes
@@ -42,6 +42,7 @@ artwork/icons/ToolbarItems/StabiloOpen.psd -text
 artwork/icons/ToolbarItems/nextSymbol.psd -text
 artwork/icons/ToolbarItems/previousSymbol.psd -text
 artwork/icons/ToolbarItems/test.psd -text
+artwork/icons/mode.psd -text
 artwork/icons/txt.icns -text
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
