- improved mode shadow contrast

--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ artwork/icons/ToolbarItems/nextSymbol.psd -text
 artwork/icons/ToolbarItems/previousSymbol.psd -text
 artwork/icons/ToolbarItems/test.psd -text
 artwork/icons/mode.psd -text
+artwork/icons/mode32.psd -text
 artwork/icons/txt.icns -text
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
