--- a/.gitattributes
+++ b/.gitattributes
@@ -635,6 +635,8 @@ subethaedit/PopUpButtonCell.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
+subethaedit/PullDownButton.h -text
+subethaedit/PullDownButton.m -text
 subethaedit/PullDownButtonCell.h -text
 subethaedit/PullDownButtonCell.m -text
 subethaedit/RE.txt -text
