--- a/.gitattributes
+++ b/.gitattributes
@@ -275,7 +275,7 @@ subethaedit/English.lproj/FindReplace.nib/keyedobjects.nib -text
 subethaedit/English.lproj/GeneralPrefs.nib/classes.nib -text
 subethaedit/English.lproj/GeneralPrefs.nib/info.nib -text
 subethaedit/English.lproj/GeneralPrefs.nib/keyedobjects.nib -text
-subethaedit/English.lproj/InfoPlist.strings -text
+subethaedit/English.lproj/InfoPlist.strings -text svneol=unset#text/plain
 subethaedit/English.lproj/InternetBrowser.nib/classes.nib -text
 subethaedit/English.lproj/InternetBrowser.nib/info.nib -text
 subethaedit/English.lproj/InternetBrowser.nib/keyedobjects.nib -text
