- Added preliminary German Help Localization

--- a/.gitattributes
+++ b/.gitattributes
@@ -120,6 +120,20 @@ English.lproj/WebPreview.nib/keyedobjects.nib -text
 /Functions.m -text
 /GeneralPreferences.h -text
 /GeneralPreferences.m -text
+German.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help[!!-~]idx -text
+German.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help.html -text
+German.lproj/SubEthaEdit[!!-~]Help/css/access.css -text
+German.lproj/SubEthaEdit[!!-~]Help/css/task_tbl_style.css -text
+German.lproj/SubEthaEdit[!!-~]Help/html/learn.html -text
+German.lproj/SubEthaEdit[!!-~]Help/html/new.html -text
+German.lproj/SubEthaEdit[!!-~]Help/html/overview.html -text
+German.lproj/SubEthaEdit[!!-~]Help/html/problems.html -text
+German.lproj/SubEthaEdit[!!-~]Help/html/shortcuts.html -text
+German.lproj/SubEthaEdit[!!-~]Help/html/tips.html -text
+German.lproj/SubEthaEdit[!!-~]Help/img/favicon.png -text
+German.lproj/SubEthaEdit[!!-~]Help/img/see-small.png -text
+German.lproj/SubEthaEdit[!!-~]Help/img/see.png -text
+German.lproj/SubEthaEdit[!!-~]Help/img/vertline2.gif -text
 /GetURLCommand.h -text
 /GetURLCommand.m -text
 /GutterRulerView.h -text
